--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,8 @@ config/master.key
 
 # Ignore node_modules
 node_modules/
+/public/packs
+/public/packs-test
+/node_modules
+yarn-debug.log*
+.yarn-integrity
