--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "dreserve",
   "private": true,
   "dependencies": {
-    "@rails/webpacker": "3.5"
+    "@rails/webpacker": "3.5",
+    "bootstrap": "^4.1.3"
   },
   "devDependencies": {
     "webpack-dev-server": "2.11.2"
